--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <script src="../javascript/lib/jquery.min.js" charset="utf-8"></script>
     <script src="../javascript/login.js" charset="utf-8"></script>
+    <link href="../css/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/login.css" rel="stylesheet">
     <title>Login</title>
   </head>
-  <body>
-    <h1>XXX银行ATM</h1>
-    <input type="text" id="bankCardNumber" placeholder="银行卡号">
-    <input type="text" id="password" placeholder="密码">
-    <input type="button" id="loginBtn" value="登录">
+  <body class="container">
+    <div class="row col-xs-offset-4 col-xs-4 text-center">
+      <div class="page-header">
+        <h1>XXX银行ATM</h1>
+      </div>
+      <input type="text" id="bankCardNumber" placeholder="银行卡号" class="form-control">
+      <input type="text" id="password" placeholder="密码" class="form-control ">
+      <input type="button" id="loginBtn" value="登 录" class="btn btn-success">
+    </div>
   </body>
 </html>
