--- a/public/html/record.html
+++ b/public/html/record.html
@@ -4,9 +4,23 @@
     <meta charset="utf-8">
     <script src="../javascript/lib/jquery.min.js" charset="utf-8"></script>
     <script src="../javascript/record.js" charset="utf-8"></script>
+    <link href="../css/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/common.css" rel="stylesheet">
     <title>Main</title>
   </head>
-  <body>
-    <h1>XXX银行ATM</h1>
+  <body class="container">
+    <div class="row col-xs-offset-4 col-xs-4 text-center">
+      <div class="page-header">
+        <h1>XXX银行ATM <small>发票</small></h1>
+      </div>
+      <h2>发票</h2>
+      <div class="text-left jumbotron">
+        <p id="record"></p>
+      </div>
+      <div class="row">
+        <input type="button" value="打印" id="print" class="btn btn-primary col-xs-offset-3 col-xs-2">
+        <input type="button" value="返回" id="return" class="btn btn-danger col-xs-offset-2 col-xs-2">
+      </div>
+    </div>
   </body>
 </html>
