change bank name

--- a/public/html/deposit.html
+++ b/public/html/deposit.html
@@ -12,7 +12,7 @@
   <body class="container">
     <div class="row col-xs-offset-4 col-xs-4 text-center">
       <div class="page-header">
-        <h1>XXX银行ATM <small>存款</small></h1>
+        <h1>西电银行ATM <small>存款</small></h1>
       </div>
       <input type="text" placeholder="金额" id="amount" class="form-control">
       <input type="button" value="确 认" id="confirm" class="btn btn-info col-xs-offset-3 col-xs-2">
