--- a/public/html/main.html
+++ b/public/html/main.html
@@ -12,7 +12,7 @@
   <body class="container">
     <div class="row col-xs-offset-4 col-xs-4 text-center">
       <div class="page-header">
-        <h1>XXX银行ATM</h1>
+        <h1>西电银行ATM</h1>
       </div>
       <div class="row">
         <input type="button" id="withdraw" value="取 款" class="btn btn-primary col-xs-6 col-xs-offset-3">
