--- a/public/html/transfer.html
+++ b/public/html/transfer.html
@@ -11,7 +11,7 @@
   <body class="container">
     <div class="row col-xs-offset-4 col-xs-4 text-center">
       <div class="page-header">
-        <h1>XXX银行ATM <small>转账</small></h1>
+        <h1>西电银行ATM <small>转账</small></h1>
       </div>
       <div class="row">
         <input type="text" placeholder="请输入对方银行卡号" id="bankcard" class="form-control">
