--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,7 +12,7 @@
   <body class="container">
     <div class="row col-xs-offset-4 col-xs-4 text-center">
       <div class="page-header">
-        <h1>XXX银行ATM</h1>
+        <h1>西电银行ATM</h1>
       </div>
       <input type="text" id="bankCardNumber" placeholder="银行卡号" class="form-control">
       <input type="text" id="password" placeholder="密码" class="form-control ">
