--- a/public/html/record.html
+++ b/public/html/record.html
@@ -11,7 +11,7 @@
   <body class="container">
     <div class="row col-xs-offset-4 col-xs-4 text-center">
       <div class="page-header">
-        <h1>XXX银行ATM <small>发票</small></h1>
+        <h1>西电银行ATM <small>发票</small></h1>
       </div>
       <h2>发票</h2>
       <div class="text-left jumbotron">
